Archive2/74/cbd726ddc53221/output
main.cpp:6:26: error: 'prawda' was not declared in this scope
 void bar ( )  noexcept ( prawda )  { } 
                          ^
